# feature-importance-neural-networks

./: AGENTS.md  LICENSE  README.md  compare_feature_importance.py  conv_filter_combination_accuracy.py  conv_filter_topk_accuracy.py  conv_visualization_example.py  conv_visualization_topk.py  conv_viz_utils.py  digits_visualization_example.py  full_experiment.py  pyproject.toml  text_classification_example.py  text_token_importance_example.py  token_topk_utils.py  variance-based feature importance in artificial neural networks.ipynb
neural_feature_importance/: __init__.py  callbacks.py  conv_callbacks.py  embedding_callbacks.py  predict_top_k.py
neural_feature_importance/utils/: __init__.py
neural_importance/: __init__.py
neural_importance/utils/: monitors.py
notebooks/: conv_visualization_example.ipynb  token_importance_topk_example.ipynb
scripts/: compare_feature_importance.py  conv_visualization_example.py  token_importance_topk_example.py
variance_importance/: __init__.py  callbacks.py
