[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-feature-importance"
description = "Variance-based feature importance for Neural Networks using callbacks for Keras and PyTorch"
authors = [{name = "CR de Sá"}]
readme = "README.md"
dependencies = ["numpy"]
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
tensorflow = ["tensorflow"]
torch = ["torch"]
[tool.setuptools_scm]
